--- a/2020-04-08-Resume.md
+++ b/2020-04-08-Resume.md
@@ -33,10 +33,11 @@ summary: the summary of myself
 - ImageJ (Fiji, Jython)
   
 # Publication
-- **Guo C#**, Nguyen H A T#,  Homberg J R. Cognitive Bias Under Adverse and Rewarding Conditions: A Systematic Review of Rodent Studies[J]. **Frontiers in Behavioral Neuroscience**, 2020, 14: 14. #co-first author
+- **Guo C#**, Nguyen H A T#,  Homberg J R. Cognitive Bias Under Adverse and Rewarding Conditions: A Systematic Review of Rodent Studies[J]. **Frontiers in Behavioral Neuroscience**, 2020, 14: 14. #co-first author [PDF](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/pdf/2020_cguo_Cognitive_Bias.pdf)
 - Karel, P., Van der Toorn, A., Vanderschuren, L., **Guo, C.**, Sadighi Alvandi, M., Reneman, L., ... & Homberg, J. R. (2019). Ultrahigh‐resolution MRI reveals structural brain differences in serotonin transporter knockout rats after sucrose and cocaine self‐administration. **Addiction biology**.
 - Caffino, L., Verheij, M. M., Que, L., **Guo, C.**, Homberg, J. R., & Fumagalli, F. (2018). Increased cocaine self‐administration in rats lacking the serotonin transporter: a role for glutamatergic signaling in the habenula. **Addiction biology**.
-- **Chao Guo**, Bing Mei. Review of sexual behavior disorder in Alzheimer's disease: epidemiology and mechanism[J]. **Chinese Journal of Gerontology**., 2016, (03) : 720-724. IN CHINESE 
+- **Chao Guo**, Bing Mei. Review of sexual behavior disorder in Alzheimer's disease: epidemiology and mechanism[J]. **Chinese Journal of Gerontology**., 2016, (03) : 720-724. IN CHINESE [PDF](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/pdf/cguo-阿尔茨海默症伴性行为紊乱的相关研究进展.pdf)
+
 
 # Talk
 - 5-HTT modulates decisional anhedonia in rats. **Donders Stress Meeting**; Nijmegen, Netherlands; 2020.03
@@ -70,5 +71,7 @@ summary: the summary of myself
 - [Mixed effect regression in R](https://brightspace.ru.nl/d2l/home/93862), Radboud University, 2020.04
 - [An introduction to Data visualization and Cluster analysis (using R)](https://brightspace.ru.nl/d2l/home/75100), Radboud University Summer School, 2019.07
 - [Advance Statistics in R](https://brightspace.ru.nl/d2l/home/17033), Radboud University, 2019.02
+- [PsychoPy tool box](https://www.socsci.ru.nl/wilberth/nocms/psychopy/print.php),Radboud University, 2018.08
 - [Python语言程序设计](http://www.icourse163.org/course/BIT-268001?tid=1002788003), Beijing Institute of Technology in 中国大学MOOC, 2018.07
 - [Programming for Everybody (Getting Started with Python)](https://www.coursera.org/specializations/python), Michigan University in Coursera, 2017
+
