--- a/_posts/2020-04-08-2020-04-08-post-我的第一个博客.md
+++ b/_posts/2020-04-08-2020-04-08-post-我的第一个博客.md
@@ -20,6 +20,6 @@ summary:
 
 >关键词：家 阳光 树
 
-zzzz ![Flower tree](img/../../img/post-bg-flower-tree.png)
+zzzz ![](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/post-bg-flower-tree.png)
 
 
