--- a/2020-04-08-Resume.md
+++ b/2020-04-08-Resume.md
@@ -15,18 +15,18 @@ summary: the summary of myself
 
 - **Doctor of Science:** Neuroscience
   - Radboud University, Donders Institute | Nijemgen, Netherlands| 2016.11-present
-- **Master of Science:** Neuobiology
+- **Master of Science:** Neurobiology
   - East China Normal University | Shanghai, China | 2013.09-2016.06
 
 
-# Bologial skills
-- Rodent behavioral traning and test
+# Biological skills
+- Rodent behavioral training and test
 - Stereotactic surgery for DREADDs (virus neuron tracing)
 - Catheter implantation surgery for cocaine self-adminstration
-- DNA transformation, ELISA, Immunofluorecence
+- DNA transformation, ELISA, Immuno-fluorescence
   
 # Data analysis skills
-- Python (pandas, matplot, seaborn)
+- Python (pandas, matplotlib, seaborn)
 - R (lme4, brms)
 - JASP (statistic analysis)
 - Prism GraphPad
@@ -64,15 +64,18 @@ summary: the summary of myself
 
 # Towards data Analyst
 
-- Statisitc Plot
+- [Introduction, reinforcement learning tutorial](https://github.com/lei-zhang/RL_tutorial_webinar), Zhang Lei, 2020.04
+- Statistic Plot
   - [Estimation Plot](http://www.estimationstats.com/#/background)
-  - [Raincloud plot](https://github.com/RainCloudPlots/RainCloudPlots/tree/master/tutorial_python) onlin tutorial, 2020.04
+  - [Raincloud plot](https://github.com/RainCloudPlots/RainCloudPlots/tree/master/tutorial_python) online tutorial, 2020.04
 - [Data Visualization Online Courses 2020](https://idvxlab.com/teaching.html), lab website in Tongji University, 2020.04
-- [Fitting Statistical Models to Data with Python](https://www.coursera.org/learn/fitting-statistical-models-data-python/home/info), Michigan University in Coursera, 2020.04
-  - [Visualized Introduction to Hierarchical Modeling](http://mfviz.com/hierarchical-models/)
-  - [Hierarchical modelling interface](https://calpolystat3.shinyapps.io/Hierarchical_Models/)
+- [Fitting Statistical Models to Data with Python](https://www.coursera.org/learn/fitting-statistical-models-data-python/home/info), Michigan University in Coursera
+  - multilevel, with random effect
+    - [Visualized Introduction to Hierarchical Modeling](http://mfviz.com/hierarchical-models/)
+    - [Hierarchical modelling interface](https://calpolystat3.shinyapps.io/Hierarchical_Models/)
+  - GEE, overall relationships across sampling clusters (no random effect)
 - [Mixed effect regression in R](https://brightspace.ru.nl/d2l/home/93862), Radboud University, 2020.04
-  - [Rection time distribution](https://lindeloev.shinyapps.io/shiny-rt/) 2020.03
+  - [Reaction time distribution](https://lindeloev.shinyapps.io/shiny-rt/) 2020.03
   - [SOP of Mixed-effect Model](http://decision-lab.org/people/) from Bernd Figner and his team V001
 - [An introduction to Data visualization and Cluster analysis (using R)](https://brightspace.ru.nl/d2l/home/75100), Radboud University Summer School, 2019.07
 - [Advance Statistics in R](https://brightspace.ru.nl/d2l/home/17033), Radboud University, 2019.02
