--- a/2020-04-08-Resume.md
+++ b/2020-04-08-Resume.md
@@ -64,10 +64,10 @@ summary: the summary of myself
 
 # Towards data Analyst
 
-- [Introduction, reinforcement learning tutorial](https://github.com/lei-zhang/RL_tutorial_webinar), Zhang Lei, 2020.04
+- [Introduction, reinforcement learning tutorial](https://github.com/lei-zhang/RL_tutorial_webinar), Lei Zhang, 2020.04
 - Statistic Plot
-  - [Estimation Plot](http://www.estimationstats.com/#/background)
-  - [Raincloud plot](https://github.com/RainCloudPlots/RainCloudPlots/tree/master/tutorial_python) online tutorial, 2020.04
+  - [Estimation Plot in python](https://acclab.github.io/DABEST-python-docs/tutorial.html)
+  - [Raincloud plot in python](https://github.com/RainCloudPlots/RainCloudPlots/tree/master/tutorial_python) online tutorial, 2020.04
 - [Data Visualization Online Courses 2020](https://idvxlab.com/teaching.html), lab website in Tongji University, 2020.04
 - [Fitting Statistical Models to Data with Python](https://www.coursera.org/learn/fitting-statistical-models-data-python/home/info), Michigan University in Coursera
   - multilevel, with random effect
