--- a/2020-04-08-Resume.md
+++ b/2020-04-08-Resume.md
@@ -10,13 +10,17 @@ tags:
 summary: the summary of myself
 ---
 
-    
+
 # Education
 
 - **Doctor of Science:** Neuroscience
   - Radboud University, Donders Institute | Nijemgen, Netherlands| 2016.11-present
+  - Project keywords: serotonin; addiction; depression; generalization
+  - Supervisors: [Judith Homberg](https://scholar.google.nl/citations?user=Jgcv9CQAAAAJ&hl=nl); [Benno Roozendaal](https://www.researchgate.net/profile/Benno_Roozendaal)
 - **Master of Science:** Neurobiology
   - East China Normal University | Shanghai, China | 2013.09-2016.06
+  - Project keywords: Alzheimer's disease; innate behavior (sexual behavior); hypersensitivity inflammation & mood;
+  - Supervisors: [Bo Meng](https://www.researchgate.net/profile/Bo_Meng16), [Bing Mei](http://english.ecnu.edu.cn/_t89/1746/list.htm)
 
 
 # Biological skills
@@ -36,7 +40,7 @@ summary: the summary of myself
 - **Guo C#**, Nguyen H A T#,  Homberg J R. Cognitive Bias Under Adverse and Rewarding Conditions: A Systematic Review of Rodent Studies[J]. **Frontiers in Behavioral Neuroscience**, 2020, 14: 14. #co-first author [PDF](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/pdf/2020_cguo_Cognitive_Bias.pdf)
 - Karel, P., Van der Toorn, A., Vanderschuren, L., **Guo, C.**, Sadighi Alvandi, M., Reneman, L., ... & Homberg, J. R. (2019). Ultrahigh‐resolution MRI reveals structural brain differences in serotonin transporter knockout rats after sucrose and cocaine self‐administration. **Addiction biology**.
 - Caffino, L., Verheij, M. M., Que, L., **Guo, C.**, Homberg, J. R., & Fumagalli, F. (2018). Increased cocaine self‐administration in rats lacking the serotonin transporter: a role for glutamatergic signaling in the habenula. **Addiction biology**.
-- **Chao Guo**, Bing Mei. Review of sexual behavior disorder in Alzheimer's disease: epidemiology and mechanism[J]. **Chinese Journal of Gerontology**., 2016, (03) : 720-724. IN CHINESE [PDF](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/pdf/cguo-阿尔茨海默症伴性行为紊乱的相关研究进展.pdf)
+- **Chao Guo**, Bo Meng, Bing Mei. Sexual behavior changes in Alzheimer's disease, from the view of epidemiology and mechanisms[J]. **Chinese Journal of Gerontology**., 2016, (03) : 720-724. IN CHINESE [PDF](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/pdf/cguo-阿尔茨海默症伴性行为紊乱的相关研究进展.pdf)
 
 
 # Talks
@@ -61,6 +65,8 @@ summary: the summary of myself
 - National Endeavor Scholarship, October 2011 (top 2%)
   - Top 2% scores of comprehensive development in moral, intelligence, sports, aesthetics in Life Science department.
 
+# Personal hobbies
+|![Dancing](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_dancing.png) |![Hiking]](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_hiking.png) |![reading]](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_reading.png) |![tourism]](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_tourism.png)
 
 # Towards data Analyst
 
