--- a/2020-04-08-Resume.md
+++ b/2020-04-08-Resume.md
@@ -66,7 +66,7 @@ summary: the summary of myself
   - Top 2% scores of comprehensive development in moral, intelligence, sports, aesthetics in Life Science department.
 
 # Personal hobbies
-|![Dancing](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_dancing.png) |![Hiking]](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_hiking.png) |![reading]](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_reading.png) |![tourism]](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_tourism.png)
+![Dancing](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_dancing.png) ![Hiking](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_hiking.png) ![reading](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_reading.png) |![tourism](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_tourism.png)
 
 # Towards data Analyst
 
