--- a/2020-04-08-Resume.md
+++ b/2020-04-08-Resume.md
@@ -66,12 +66,9 @@ summary: the summary of myself
   - Top 2% scores of comprehensive development in moral, intelligence, sports, aesthetics in Life Science department.
 
 # Personal hobbies
-<div align = 'center'> 
-<image src= 'https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_dancing.png'>
-<image src = 'https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_hiking.png'>
-<image src = 'https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_reading.png'>
-<image src = 'https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_tourism.png'>
-</div>
+<center class='half'> 
+  <image src= 'https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_dancing.png'><image src = 'https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_hiking.png'><image src = 'https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_reading.png'><image src = 'https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/img/hobb_tourism.png'>
+</center>
 
 # Towards data Analyst
 
