--- a/2020-04-08-Resume.md
+++ b/2020-04-08-Resume.md
@@ -16,7 +16,7 @@ summary: the summary of myself
 - **Doctor of Science:** Neuroscience
   - Radboud University, Donders Institute | Nijemgen, Netherlands| 2016.11-present
   - Project keywords: serotonin; addiction; depression; generalization
-  - Supervisors: [Judith Homberg](https://scholar.google.nl/citations?user=Jgcv9CQAAAAJ&hl=nl); [Benno Roozendaal](https://www.researchgate.net/profile/Benno_Roozendaal)
+  - Supervisors: [Judith Homberg](https://scholar.google.nl/citations?user=Jgcv9CQAAAAJ&hl=nl); 
 - **Master of Science:** Neurobiology
   - East China Normal University | Shanghai, China | 2013.09-2016.06
   - Project keywords: Alzheimer's disease; innate behavior (sexual behavior); hypersensitivity inflammation & mood;
