--- a/2020-04-08-Resume.md
+++ b/2020-04-08-Resume.md
@@ -67,6 +67,8 @@ summary: the summary of myself
 
 # Towards data Analyst
 
+This is my track of being data analyst
+
 - [Introduction, reinforcement learning tutorial](https://github.com/lei-zhang/RL_tutorial_webinar), Lei Zhang, 2020.04
 - Statistic Plot
   - [Estimation Plot in python](https://acclab.github.io/DABEST-python-docs/tutorial.html)
@@ -74,9 +76,10 @@ summary: the summary of myself
 - [Data Visualization Online Courses 2020](https://idvxlab.com/teaching.html), lab website in Tongji University, 2020.04
 - [Fitting Statistical Models to Data with Python](https://www.coursera.org/learn/fitting-statistical-models-data-python/home/info), Michigan University in Coursera
   - multilevel, with random effect
-    - [Visualized Introduction to Hierarchical Modeling](http://mfviz.com/hierarchical-models/)
-    - [Hierarchical modelling interface](https://calpolystat3.shinyapps.io/Hierarchical_Models/)
+    - [Visual Introduction to Hierarchical Model](http://mfviz.com/hierarchical-models/)
+    - [Graphic interface of Hierarchical model](https://calpolystat3.shinyapps.io/Hierarchical_Models/)
   - GEE, overall relationships across sampling clusters (no random effect)
+  - [visual introduction to machine learning](http://www.r2d3.us/visual-intro-to-machine-learning-part-1/)
 - [Mixed effect regression in R](https://brightspace.ru.nl/d2l/home/93862), Radboud University, 2020.04
   - [Reaction time distribution](https://lindeloev.shinyapps.io/shiny-rt/) 2020.03
   - [SOP of Mixed-effect Model](http://decision-lab.org/people/) from Bernd Figner and his team V001
