--- a/2020-04-08-Resume.md
+++ b/2020-04-08-Resume.md
@@ -56,11 +56,11 @@ summary: the summary of myself
 - Cognitive bias in serotonin transporter knock-out rats. **Dutch Neuroscience Meeting**; Lunteren, Netherlands; 2017.06
 
 # Awards/Grants
-- Exchange program between Brain and Mind Institute (London, Canada) and Donders Institute (Nijmegen, the Netherlands), 2019.05 (€8,212)
+- Exchange program between Brain and Mind Institute (London, Canada) and Donders Institute (Nijmegen, the Netherlands), 2019.05 
   - Visiting Minda's Lab in Western University; London Canada
-- Open-Microscope travel grant between Dundee University and Okinawa Institute of Science and Technology, 2018 (€2,200)
+- Open-Microscope travel grant between Dundee University and Okinawa Institute of Science and Technology, 2018 
   - Get trained in bio-image analysis; Okinawa, Japan
-- Radboud University travel grant for PhD student, 2018 (‎€400)
+- Radboud University travel grant for PhD student, 2018
   - Attend the European neuroscience conference; Berlin, Germany
 - Scholarship from China Scholarship Council for Chinese Ph.D Candidates, 2016.06 
   - Support my Ph.D research in Radboud University as a fellowship; Nijmegen, Netherlands
