--- a/2020-04-08-Resume.md
+++ b/2020-04-08-Resume.md
@@ -20,7 +20,7 @@ summary: the summary of myself
 - **Master of Science:** Neurobiology
   - East China Normal University | Shanghai, China | 2013.09-2016.06
   - Projects keywords: Alzheimer's disease; Innate behavior (sexual behavior); Hypersensitivity inflammation & Mood; Pharmacology
-  - Master Thesis:  Allergen exposure increased emotion-like behavior in a mouse model of allergic rhinitis. (abstract and figure lends are in English) [PDF](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/pdf/硕士学位论文.pdf)
+  - Master Thesis:  Allergen exposure increased emotion-like behavior in a mouse model of allergic rhinitis. (abstract and figure legends are in English) [PDF](https://raw.githubusercontent.com/jetgc/jetgc.github.io/master/pdf/硕士学位论文.pdf)
   - Supervisor: [Bing Mei](http://english.ecnu.edu.cn/_t89/1746/list.htm)
   - Mentor:[Bo Meng](https://www.researchgate.net/profile/Bo_Meng16)
 
@@ -29,7 +29,7 @@ summary: the summary of myself
 - Rich experience of variety of rodent behavioral tests
 - Rich experience of fluorescence staining & imaging, qPCR, ELISA
 - Much experience of Surgery: Stereotactic surgery for DREADDs (virus neuron tracing);Catheter implantation surgery for drug self-adminstration
-- Limited experience in DNA transformation
+- Limited experience in DNA editing
   
 # Data analysis skills
 - Python (pandas, matplotlib, seaborn), 80%
@@ -56,11 +56,11 @@ summary: the summary of myself
 - Cognitive bias in serotonin transporter knock-out rats. **Dutch Neuroscience Meeting**; Lunteren, Netherlands; 2017.06
 
 # Awards/Grants
-- Exchange program between Brain and Mind Institute (London, Canada) and Donders Institute (Nijmegen, the Netherlands), 2019.05 
+- Exchange program between Brain and Mind Institute (London, Canada) and Donders Institute (Nijmegen, the Netherlands), 2019.05 (€8,200)
   - Visiting Minda's Lab in Western University; London Canada
-- Open-Microscope travel grant between Dundee University and Okinawa Institute of Science and Technology, 2018 
+- Open-Microscope travel grant between Dundee University and Okinawa Institute of Science and Technology, 2018 (€2,200)
   - Get trained in bio-image analysis; Okinawa, Japan
-- Radboud University travel grant for PhD student, 2018
+- Radboud University travel grant for PhD student, 2018 (€400)
   - Attend the European neuroscience conference; Berlin, Germany
 - Scholarship from China Scholarship Council for Chinese Ph.D Candidates, 2016.06 
   - Support my Ph.D research in Radboud University as a fellowship; Nijmegen, Netherlands
@@ -70,7 +70,7 @@ summary: the summary of myself
 
 # Towards data Analyst
 
-### This is my track of being data analyst, more details can be found [**Here**](https://jetgc.github.io/2020/04/12/twards-to-data-analyst/)
+### Resources I followed, more details can be found [**Here**](https://jetgc.github.io/2020/04/12/twards-to-data-analyst/)
 
 - [Introduction, reinforcement learning tutorial in R and Stan](https://github.com/lei-zhang/RL_tutorial_webinar), Lei Zhang, 2020.04
 
