--- a/2020-04-08-Resume.md
+++ b/2020-04-08-Resume.md
@@ -47,7 +47,7 @@ summary: the summary of myself
 
 # Talks
 - 5-HTT modulates decisional anhedonia in rats. **Donders Stress Meeting**; Nijmegen, Netherlands; 2020.03
-- [Visual stimulus generalization in serotonin transporter KO rat.](https://www.ru.nl/dondersdiscussions/previous-events/dd2018/program/parallel-sessions/parallel-session-1/) **Donders Discussion** Nijmegen, Netherlands;2018.10 
+- [Visual stimulus generalization in serotonin transporter KO rats.](https://www.ru.nl/dondersdiscussions/previous-events/dd2018/program/parallel-sessions/parallel-session-1/) **Donders Discussion** Nijmegen, Netherlands;2018.10 
 - Sensitive to both negative and positive reinforcements? The mechanisms of comorbidity between addiction and depression **Master Class in Amsterdam University**; Amsterdam, Netherlands, 2018.01
 
 # Posters
@@ -72,6 +72,7 @@ summary: the summary of myself
 
 ### Resources I followed, more details can be found [**Here**](https://jetgc.github.io/2020/04/12/twards-to-data-analyst/)
 
+- [NeuroMatch: Computational modelling](https://github.com/NeuromatchAcademy/course-content) 2020.07
 - [Introduction, reinforcement learning tutorial in R and Stan](https://github.com/lei-zhang/RL_tutorial_webinar), Lei Zhang, 2020.04
 
 - [Fitting Statistical Models to Data with Python](https://www.coursera.org/learn/fitting-statistical-models-data-python/home/info), Michigan University in Coursera, 2020.04
